compiler/tests/success/x86-64/param.jazz
param int n = 4;

inline
fn f(reg u64[n] x) -> reg u64[n] {
reg u64[n] y;
inline int i;
for i = 0 to n { y[i] = x[i]; }
return y;
}
