compiler/tests/fail/array_expansion/x86-64/index_not_constant_return.jazz
fn f () -> reg u64[4] {
  reg u64[4] r;

  inline int i;
  for i = 0 to 4 {
    r[i] = 0;
  }

  return r;
}

export fn main () -> reg u64 {
  reg u64[4] r;
  reg u64 res;

  reg u64 i;
  i = 0;
  r[i:4] = f();
  res = r[0];

  return res;
}
